--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -120,8 +120,7 @@ h6,
   position: relative;
   margin: 0 auto;
   padding: 0;
-  width: 100%;
-  overflow: auto; }
+  width: 100%; }
 
 .grid--fluid {
   max-width: 960px; }
@@ -347,7 +346,8 @@ body {
 
 .section-content {
   margin: 0 0 30px;
-  font-weight: 300; }
+  font-weight: 300;
+  overflow-x: hidden; }
 
 section {
   position: relative;
@@ -387,7 +387,7 @@ section {
 
 #sidebar {
   max-height: 100vh;
-  overflow: scroll;
+  overflow-y: scroll;
   position: absolute;
   background-color: #2E2E2E; }
 
@@ -411,7 +411,8 @@ section {
 #page-header {
   padding: 5% 10px 5%;
   background: #2E2E2E;
-  color: #fff; }
+  color: #fff;
+  overflow: hidden; }
 
 .badge, .badge--square {
   display: inline-block;
